# llm-detect-ai-generated-text

./: .env.example  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
configs/: config.yaml
configs/cv/: default.yaml  stratified_kfold.yaml
configs/experiment/: 000-finetune.yaml  000.yaml  001-finetune.yaml  001.yaml  002-staking-linear.yaml  002e.yaml  003-finetune.yaml  004-tabular.yaml
configs/hydra/: default.yaml  kaggle.yaml
configs/imker/tasks/: default.yaml
configs/kaggle/: default.yaml
configs/lightning/callbacks/: default.yaml  model_checkpoint.yaml
configs/lightning/data/: default.yaml  embedding.yaml
configs/lightning/logger/: default.yaml  wandb.yaml
configs/lightning/model/: default.yaml  embedding.yaml
configs/lightning/trainer/: default.yaml
configs/meta/: default.yaml
configs/paths/: default.yaml  kaggle.yaml
gcp/: mount_bucket.sh
notebooks/experiment/: baseline_v01.ipynb  baseline_v1.ipynb  e01.ipynb  finetune_v01.ipynb  finetune_v02_bnb.ipynb  stacking_linear_v01.ipynb  tabular_v01.ipynb  v01.ipynb  v02.ipynb
notebooks/inference/: finetune_v01.ipynb  tabular_v01.ipynb  v01.ipynb
notebooks/optimization/: tfidf_v01.ipynb
src/: deploy.py  inference.py  main.py  train.py
src/imker/tasks/: preprocess.py
src/lightning/data/: lt_datamodule.py
src/lightning/data/components/: text.py  text_transformer.py
src/lightning/model/: lt_module.py
src/lightning/model/components/: text.py  text_transformer.py
src/utils/: kaggle_utils.py  metrics.py  pylogger.py  torch_utils.py
