[project]
name = "llm-detect-ai-generated-text"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "osushinekotan", email = "spmt3710@gmail.com" }
]
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "lightning>=2.1.2",
    "kaggle>=1.5.16",
    "pandas>=2.0.3",
    "tqdm>=4.66.1",
    "scikit-learn>=1.3.2",
    "wandb>=0.16.0",
    "joblib>=1.3.2",
    "rich>=13.7.0",
    "torch>=2.1.1",
    "transformers>=4.35.2",
    "sentencepiece>=0.1.99",
    "ipykernel>=6.26.0",
    "notebook>=7.0.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
]

[tool.hatch.metadata]
allow-direct-references = true
