[project]
name = "llm-detect-ai-generated-text"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "osushinekotan", email = "spmt3710@gmail.com" }
]
dependencies = [
    "hydra-core>=1.3.2",
    "hydra-colorlog>=1.2.0",
    "lightning>=2.1.2",
    "kaggle>=1.5.16",
    "tqdm>=4.66.1",
    "scikit-learn>=1.3.2",
    "wandb>=0.16.0",
    "joblib>=1.3.2",
    "rich>=13.7.0",
    "torch>=2.1.1",
    "transformers>=4.35.2",
    "sentencepiece>=0.1.99",
    "ipykernel>=6.26.0",
    "notebook>=7.0.6",
    "bitsandbytes>=0.41.2.post2",
    "cuml-cu11>=23.10.0",
    "imker @ git+https://github.com/osushinekotan/imker",
    "gensim>=4.3.2",
    "neattext>=0.1.3",
    "nltk>=3.8.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

[[tool.rye.sources]]
name = "cuml-cu11"
url = "https://pypi.nvidia.com"
type = "index"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.11.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
target-version = "py310" 
unfixable = ["F401", "F841"]
ignore = ["E501"]
line-length = 120

[tool.black]
line-length = 120

[tool.mypy]
allow_redefinition = true
allow_untyped_globals = false
check_untyped_defs = true
color_output = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
implicit_reexport = true
namespace_packages = true
no_implicit_optional = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = false
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = false
disallow_any_generics = false
